--- a/ReduxTutorial/package.json
+++ b/ReduxTutorial/package.json
@@ -42,6 +42,7 @@
     "file-loader": "~0.8.4",
     "formidable": "~1.0.17",
     "mocha": "~2.3.3",
+    "multiparty": "~3.3.2",
     "react-hot-loader": "~1.3.0",
     "redux-devtools": "~2.0.0",
     "style-loader": "~0.12.3",
